package com.remote.proxy;

/**
 *
 * @author andrebronca
 */
class UnicastRemoreObject {
    
}
